# 2D-figure-library

./: .dockerignore  .gitignore  CMakeLists.txt  LICENSE.md  README.md  dockerfile  main.cpp
src/: CMakeLists.txt
src/contracts/: circle.hpp  figure.hpp  stringConvertible.hpp  string_to_figure.hpp  triangle.hpp
src/entities/: circle.cpp  stringConvertible.cpp  string_to_figure.cpp  triangle.cpp
src/factory/implementations/: random_figure_factory.cpp  stream_figure_factory.cpp  stream_figure_fractory.cpp
src/factory/interfaces/: figure_factory.hpp  random_figure_factory.hpp  stream_figure_factory.hpp  stream_figure_fractory.hpp
src/utilities/: string_to_figure.cpp
tests/: CMakeLists.txt  circle-tests.cpp  factory-tests.cpp  triangle-tests.cpp
